# django-mcp-framework

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
django_mcp/: __init__.py  admin.py  apps.py  audit.py  derivation.py  discovery.py  dispatch.py  drf.py  models.py  names.py  prompts.py  registry.py  requests.py  resources.py  schemas.py  search.py  transport.py  urls.py  urlwalker.py  views.py
django_mcp/management/commands/: mcp_key.py  mcp_server.py
django_mcp/migrations/: 0001_initial.py
docs/: README.md
docs/concepts/: ERRATA.md  TODO-DMCP-00-CONCEPTS.md  TODO-DMCP-01-ADMIN.md  TODO-DMCP-02-APPLICATIONS.md  TODO-DMCP-03-RESOURCES-PROMPTS.md  TODO-DMCP-04-TRANSPORT.md
docs/ops/: README.md  oauth.md
tests/: conftest.py  settings.py  test_crud.py  test_discovery.py  test_dmcp02.py  test_dmcp03.py  test_dmcp04.py  test_invariants.py  test_names.py  urls.py
tests/testapp/: admin.py  apps.py  models.py  urls.py  views.py
