[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-mcp-framework"
version = "0.9.0"
description = "Expose Django registered views and URL patterns as Model Context Protocol (MCP) tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Softoboros Project" },
]
keywords = ["django", "mcp", "model-context-protocol", "llm", "tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Django>=4.2,<6.0",
  "asgiref>=3.7",
]

[project.optional-dependencies]
drf = [
  "djangorestframework>=3.14",
]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "django-stubs>=5.0",
  "djangorestframework>=3.14",
]

[project.urls]
Homepage = "https://github.com/SoftOboros/django-mcp-framework"
Source = "https://github.com/SoftOboros/django-mcp-framework"
Documentation = "https://github.com/SoftOboros/django-mcp-framework/tree/main/docs"
Issues = "https://github.com/SoftOboros/django-mcp-framework/issues"

[tool.setuptools.packages.find]
include = ["django_mcp*"]
exclude = ["tests*", "example*", "docs*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning:django.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "**/migrations/**",  # Django's makemigrations output is canonical; not ours to reformat.
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
